--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, l) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      })
+    })(window, 'dataLayer');
+  </script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>FXeater | First saw, first try</title>
   <base href="/">
